force-app/main/default/objects/Skill__mdt/Skill__mdt.object-meta.xml
<CustomObject>
    <label>Skill</label>
    <pluralLabel>Skills</pluralLabel>
    <description>Custom metadata type for storing skill definitions used in AI job matching</description>
</CustomObject> 