force-app/main/default/objects/Skill__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category of the skill (e.g., Technical, Soft Skill, Domain Knowledge)</description>
    <inlineHelpText>Category of the skill (e.g., Technical, Soft Skill, Domain Knowledge)</inlineHelpText>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical</fullName>
                <default>true</default>
                <label>Technical</label>
            </value>
            <value>
                <fullName>Soft Skill</fullName>
            </value>
            <value>
                <fullName>Domain Knowledge</fullName>
            </value>
            <value>
                <fullName>Language</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Tool</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 