force-app/main/default/objects/Skill__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the skill</description>
    <inlineHelpText>Description of the skill</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField> 