force-app/main/default/objects/Skill__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if the skill is active and should be used in matching</description>
    <inlineHelpText>Indicates if the skill is active and should be used in matching</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField> 