force-app/main/default/objects/Skill__mdt/fields/Keywords__c.field-meta.xml
<CustomField>
    <fullName>Keywords__c</fullName>
    <description>Comma-separated list of keywords for matching this skill in job descriptions</description>
    <inlineHelpText>Comma-separated list of keywords for matching this skill in job descriptions</inlineHelpText>
    <label>Keywords</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField> 