force-app/main/default/objects/Skill__mdt/fields/RelatedSkills__c.field-meta.xml
<CustomField>
    <fullName>RelatedSkills__c</fullName>
    <description>Comma-separated list of IDs of related skills</description>
    <inlineHelpText>Comma-separated list of IDs of related skills</inlineHelpText>
    <label>Related Skills</label>
    <type>TextArea</type>
</CustomField> 